--- a/templates/Components/navigation.html
+++ b/templates/Components/navigation.html
@@ -15,15 +15,15 @@
                         Help & FAQs
                     </a>
 
-                    <a href="{% url 'userProfile' %}" class="flex-c-m trans-04 p-lr-25">
+                    <a href="" class="flex-c-m trans-04 p-lr-25">
                         My Account
                     </a>
 
-                    <a href="{% url 'login' %}" class="flex-c-m trans-04 p-lr-25">
+                    <a href="" class="flex-c-m trans-04 p-lr-25">
                         <span class="lnr lnr-user"></span>
                     </a>
 
-                    <a href="{% url 'register' %}" class="flex-c-m trans-04 p-lr-25">
+                    <a href="" class="flex-c-m trans-04 p-lr-25">
                         Register
                     </a>
                 </div>
@@ -34,7 +34,7 @@
             <nav class="limiter-menu-desktop container">
                 
                 <!-- Logo desktop -->		
-                <a href="{% url 'home' %}" class="logo">
+                <a href="" class="logo">
                     <img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO">
                 </a>
 
@@ -42,21 +42,21 @@
                 <div class="menu-desktop">
                     <ul class="main-menu">
                         <li class="active-menu">
-                            <a href="{% url 'home' %}">Home</a>
+                            <a href="">Home</a>
                         </li>
 
                         <li class="label1" data-label1="new">
-                            <a href="{% url 'shop' %}">Shop</a>
+                            <a href="">Shop</a>
                         </li>
                         <li>
-                            <a href="{% url 'blog' %}">Blog</a>
+                            <a href="">Blog</a>
                         </li>
                         <li>
-                            <a href="{% url 'about' %}">About</a>
+                            <a href="">About</a>
                         </li>
 
                         <li>
-                            <a href="{% url 'contact' %}">Contact</a>
+                            <a href="">Contact</a>
                         </li>
                     </ul>
                 </div>	
@@ -83,7 +83,7 @@
     <div class="wrap-header-mobile">
         <!-- Logo moblie -->		
         <div class="logo-mobile">
-            <a href="{% url 'home' %}"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+            <a href=""><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
         </div>
 
         <!-- Icon header -->
@@ -125,15 +125,15 @@
                         Help & FAQs
                     </a>
 
-                    <a href="{% url 'userProfile' %}" class="flex-c-m p-lr-10 trans-04">
+                    <a href="" class="flex-c-m p-lr-10 trans-04">
                         My Account
                     </a>
 
-                    <a href="{% url 'login' %}" class="flex-c-m p-lr-10 trans-04">
+                    <a href="" class="flex-c-m p-lr-10 trans-04">
                         Login
                     </a>
 
-                    <a href="{% url 'register' %}" class="flex-c-m p-lr-10 trans-04">
+                    <a href="" class="flex-c-m p-lr-10 trans-04">
                         Register
                     </a>
                 </div>
@@ -142,23 +142,23 @@
 
         <ul class="main-menu-m">
             <li>
-                <a href="{% url 'home' %}">Home</a>
+                <a href="">Home</a>
             </li>
 
             <li class="label1 rs1" data-label1="new">
-                <a href="{% url 'shop' %}">Shop</a>
+                <a href="">Shop</a>
             </li>
 
             <li>
-                <a href="{% url 'blog' %}">Blog</a>
+                <a href="">Blog</a>
             </li>
 
             <li>
-                <a href="{% url 'about' %}">About</a>
+                <a href="">About</a>
             </li>
 
             <li>
-                <a href="{% url 'contact' %}">Contact</a>
+                <a href="">Contact</a>
             </li>
         </ul>
     </div>
