--- a/templates/User/userProfile.html
+++ b/templates/User/userProfile.html
@@ -215,7 +215,11 @@
 			</div>
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
 				<span class="test">
-                    <a href="#" class="text-dark">Log Out</a>
+				{% if auth %}
+                	    <a href="{% url 'logout' %}" class="text-dark">Log Out</a>
+				{% else %}
+						<a href="{% url 'login' %}" class="text-dark">Log In</a>
+				{% endif %}
 				</span>
 			</div>
 		</div>
@@ -229,7 +233,11 @@
 						<a href="/"><img class="prefacelogo" src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
 					</div>
 					<div class="col-md-6 col-6 col-sm-6 text-right mt-2">
-						<a href="#" class="text-dark font-weight-bold">Log Out</a>
+							{% if auth %}
+									<a href="{% url 'logout' %}" class="text-dark">Log Out</a>
+							{% else %}
+									<a href="{% url 'login' %}" class="text-dark">Log In</a>
+							{% endif %}
 					</div>
 				</div>
 			</div>
@@ -251,6 +259,7 @@
 			<!-- NAME AND DESIGNATION INFO  -->
 			<div class="p-3 bg-dark">
 				<h5 style="font-size:25px; font-weight: bold;">{{ data.name }}</h5>
+				
 				<p>{{ data.bio }}</p>
 				<div class="d-flex  mt-5">
 					<div class="p-2">
@@ -306,7 +315,14 @@
 			<div class="container contact-btn">
 				<div class="container social-links mt-2 sec-relate-product">
 							<div class="owl-carousel  owl-theme">
-								<div class="item">
+								{% for i in links %}
+									<div class="item">
+										<a href="{{ i.social_link }}" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+											<i class="fa fa-{{ i.social_name }} socialicons-designs"></i>
+										</a>
+									</div>
+								{% endfor %}
+								<!-- <div class="item">
 									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
 										<i class="fa fa-facebook socialicons-designs"></i>
 									</a>
@@ -330,7 +346,7 @@
 									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
 										<i class="fa fa-google socialicons-designs"></i>
 									</a>
-								</div>
+								</div> -->
 							</div>
 				</div>
 			</div>
