--- a/templates/User/editProfile.html
+++ b/templates/User/editProfile.html
@@ -299,7 +299,7 @@
 								<div class="p-2">
 									<label for="socialLinks">Social</label>
 									<select id="sname" name="sname" >
-										<option>{{social_name}}</option>
+										<option>{{i.social_name}}</option>
 										<option value="facebook">Facebook</option>
 										<option value="twitter">Twitter</option>
 										<option value="snapchat">Snapchat</option>
@@ -336,28 +336,30 @@
 					<!-- PROFESSIONAL INFORMATION  -->
 					<div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
 						<div class="profwrapper">
+							{% for i in professions %}
 							<div class="mt-2 mb-2 profParentDiv">
 								<label for="cmpDesignation">Responsibilty</label>
-								<input type="text" value="Full-stack Developer">
+								<input type="text" name="prof_designation" value="{{ i.designation }}">
 
 								<label for="cmpName">Company</label>
-								<input type="text" value="Techmelba International">
+								<input type="text" name="prof_company" value="{{ i.company_name }}">
 								
 								<div>
 									<div class="d-flex justify-content-start">
 										<div class="p-1">
 											<label for="date">From</label>
-											<input type="date" class="form-control">
+											<input type="date" name="prof_from_date" class="form-control" value="{{ i.work_from }}">
 										</div>
 										<div class="p-1">
 											<label for="date">To</label>
-											<input type="date" class="form-control">
+											<input type="date" name="prof_to_date" class="form-control" value="{{ i.work_to }}">
 										</div>
 									</div>
 								</div>
 								<label for="location">Location</label>
-								<textarea type="text" name="location"  cols="30" rows="3">House 417, Road 07, Baridhara DOHS, Dhaka</textarea>
+								<textarea type="text" name="prof_location" cols="30" rows="3">{{ i.location }}</textarea>
 							</div>
+							{% endfor %}
 						</div>
 						
 						<div class="container text-right mt-4">
@@ -368,10 +370,13 @@
 					<!-- SKILLS INFORMATION  -->
 					<div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
 						<div class="skillswrapper">
+							{% for i in skills %}
 							<div class="skills">
 								<label for="skName">Skills</label>
-								<input type="text" value="Web Development">
+								<input type="text" name="skl_name" value="{{ i.skill }}">
+								<a href="javascript:void(0);" class="text-light font-weight-bold removeSkillDiv"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a>
 							</div>
+							{% endfor %}
 						</div>
 						<div class="container text-right mt-4">
 							<a href="javascript:void(0);" class="linksBtn mt-4" id="skillAddMore">Add Skills</a>
@@ -496,7 +501,7 @@
 			var maxField = 10; 
 			var addProfButton = $('#AddMoreProf');
 			var profwrap = $('.profwrapper'); 
-			var profFieldHTML = '<hr><div class="mt-2 mb-2 profParentDiv"><label for="cmpDesignation">Responsibilty</label><input type="text" value="Full-stack Developer"><label for="cmpName">Company</label><input type="text" value="Techmelba International"><div><div class="d-flex justify-content-start"><div class="p-1"><label for="date">From</label><input type="date"></div><div class="p-1"><label for="date">To</label><input type="date"></div></div></div><label for="location">Location</label><textarea type="text" name="location"  cols="30" rows="3">House 417, Road 07, Baridhara DOHS, Dhaka</textarea><a href="javascript:void(0);" class="removeProfButton text-light font-weight-bold" style="font-size: 20px;"><i class="fa fa-trash-o"></i></a></div>';
+			var profFieldHTML = '<hr><div class="mt-2 mb-2 profParentDiv"><label for="cmpDesignation">Responsibilty</label><input type="text" name="prof_designation" value=""><label for="cmpName">Company</label><input type="text" name="prof_company" value=""><div><div class="d-flex justify-content-start"><div class="p-1"><label for="date">From</label><input name="prof_from_date" type="date"></div><div class="p-1"><label for="date">To</label><input name="prof_to_date" type="date"></div></div></div><label for="location">Location</label><textarea type="text" name="prof_location"  cols="30" rows="3"></textarea><a href="javascript:void(0);" class="removeProfButton text-light font-weight-bold" style="font-size: 20px;"><i class="fa fa-trash-o"></i></a></div>';
 			var x = 1; 
 			$(addProfButton).click(function(){
 				if(x < maxField){ 
@@ -518,7 +523,7 @@
 			var maxField = 10; 
 			var addSkillButton = $('#skillAddMore');
 			var sw = $('.skillswrapper'); 
-			var skillFieldHTML = '<div class="skills"><label for="skName">Skills</label><input type="text" value="Web Development"><a href="javascript:void(0);" class="text-light font-weight-bold removeSkillDiv"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a></div>';
+			var skillFieldHTML = '<div class="skills"><label for="skName">Skills</label><input type="text" name="skl_name" value=""><a href="javascript:void(0);" class="text-light font-weight-bold removeSkillDiv"> <i class="fa fa-trash-o" style="font-size:20px;"></i></a></div>';
 			var x = 1; 
 			$(addSkillButton).click(function(){
 				if(x < maxField){ 
