--- a/templates/User/userProfile.html
+++ b/templates/User/userProfile.html
@@ -33,83 +33,56 @@
 <!--===============================================================================================-->
 <style>
 	.socialicons-designs{
-			font-size: 25px;
+			font-size: 30px;
 			background: white;
 			color:black;
 			padding: 8px 12px 8px 12px;
 			border-radius: 10px;
 		}
-		.socialicons-designs:hover{
-			background-color: black;
-			color:white;
-		}
-	 .test a {
-            font-family: Poppins-Medium;
-            font-size: 20px;
-			font-weight: bold;
-            color: #333;
-            padding: 5px 0px;
-            transition: all 0.4s;
-            -webkit-transition: all 0.4s;
-            -o-transition: all 0.4s;
-            -moz-transition: all 0.4s;
-        }
+	.socialicons-designs:hover{
+		background-color: black;
+		color:white;
+	}
+	.navloginout a {
+        font-family: Poppins-Medium;
+        font-size: 20px;
+		font-weight: bold;
+        color: #333;
+        padding: 5px 0px;
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
+        -o-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+    }
 		
 		.animsition p{
-			font-size: 20px;
+			font-size: 14px;
 		}
         
         .profileimage img{
             height: 160px;
             width: 160px;
             border-radius: 50%;
-			/* border-color: #fff;  */
         }
         .profileimage{
-			/* margin-left: 30px; */
             margin-top: -50px;
         }
-        .info-box {
-            background-color: gainsboro;
-            border-radius: 5px;
-        }
 		/* TAB BIO DATA INFORMATION */
-		.profile-info{
-			font-size: 18px;
-		}
-		.biodata p {
-			font-size:20px;
-		}
-		.pro-info{
-			font-size:20px;
-		}
 		.contact-btn .btn-text-size{
-			font-size: 18px;
+			font-size: 14px;
 		}
-		.btn-success{
-			color:#fff;
-			background-color: #000263;
-			border-color: #000263;
-		}
-		.btn-danger{
-			color:#fff;
-			background-color: #af0010;
-			border-color:#af0010;
-		}
-		
-		
 
-	/* tabs design */
-	.infoanchor a{
-			color: #9e9e9e;
-			font-weight: bold;
-			font-size: larger;
-		}
+		/* tabs design */
+		.infoanchor a{
+				color: #9e9e9e;
+				font-weight: bold;
+				font-size: larger;
+			}
 
 		a.mybtn {
 			font-weight: bold;
-			font-size: 18px;
-			padding: 11px;
+			font-size: 14px;
+			padding: 9px;
 			background: black;
 			color: white;
 			border-radius: 25px;
@@ -119,36 +92,18 @@
 		}
 		a.mybtn:hover {
 			font-weight: bold;
-			font-size: 18px;
-			padding: 11px;
+			font-size: 14px;
+			padding: 9px;
 			background: rgb(255, 253, 253);
 			color: rgb(0, 0, 0);
 			border-radius: 25px;
 			padding-left: 22px;
 			padding-right: 22px;
 		}
-		a.callbtn {
-			background: black;
-			padding: 5px 10px 5px 10px;
-			border: 2px solid white;
-			font-size: 20px;
-			color: white;
-			border-radius: 8px;
-			/* margin-left: 20px; */
-			text-align: left;
-		}
-		a.mailbtn {
-			background: black;
-			padding: 5px 10px 5px 10px;
-			border: 2px solid white;
-			font-size: 20px;
-			color: white;
-			border-radius: 8px;
-			/* margin-left: 20px; */
-			text-align: left;
-		}
+		
 		.contactbtn .bg-black {
 			background: black;
+			color: white;
 			border-radius: 10px;
 		}
 		.contactbtn .bg-black :hover {
@@ -156,15 +111,9 @@
 			color: black;
 			border-radius: 10px;
 		}
-		.contactbtn a{
-			color:white;
-			font-size: 18px;
-		}
-		.contactbtn i{
-			font-size: 20px;
-		}
+		
 		.skills p{
-			font-size: 18px;
+			font-size: 14px;
 			color:#9e9e9e;
 		}
 		.dot {
@@ -228,7 +177,7 @@
 				<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
 			</div>
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
-				<span class="test">
+				<span class="navloginout">
 				{% if auth %}
                 	    <a href="{% url 'logout' %}" class="text-dark">Log Out</a>
 				{% else %}
@@ -267,15 +216,13 @@
 			<div class="container profileimage">
 				<img src="/media/{{ data.profile_picture }}" class="img-fluid img-thumbnail" alt="Profileimg"> 
 			</div>
-		</div>
-		<!-- About INFORMATION  -->
-		<div>
+
 			<!-- NAME AND DESIGNATION INFO  -->
 			<div class="p-3 bg-dark">
-				<h5 style="font-size:25px; font-weight: bold;">{{ data.name }}</h5>
-				
+				<h5 style="font-size:20px; font-weight: bold;">{{ data.name }}</h5>
+				<p class="text-muted">Full-stack web Developer ( React JS, Python, Djanog)</p>
 				<p>{{ data.bio }}</p>
-				<div class="d-flex  mt-5">
+				<div class="d-flex  mt-3">
 					<div class="p-2">
 						<a href="#" class="mybtn">Save Contact</a>
 					</div>
@@ -284,11 +231,15 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<!-- About INFORMATION  -->
+		<div>
 			<!-- ABOUT  -->
 			<div class="p-3 bg-dark mt-2">
 				<h4 class="mt-4 font-weight-bold">About</h4>
 				<p class="mt-3">{{ data.about }}</p>
-				<div class="d-flex  mt-5">
+				<div class="d-flex  mt-3">
 					<div class="p-2">
 						<a href="tel:{{ data.phone_number }}" class="mybtn"><i class="fa fa-phone"></i> Call Now</a>
 					</div>
@@ -305,20 +256,20 @@
 					<div class="bg-black">
 						<div class="d-flex">
 							<div class="p-3"><i class="fa fa-phone mt-1"></i></div>
-							<div class="p-3"><a href="#">{{ data.phone_number }}</a></div>
+							<div class="p-3"><p>{{ data.phone_number }}</p></div>
 						</div>
 					</div>
-					<div class=" bg-black mt-2">
+					<div class="bg-black mt-2">
 						<div class="d-flex">
 							<div class="p-3"><i class="fa fa-envelope mt-1"></i></div>
-							<div class="p-3"><a href="#">{{ data.email }}</a></div>
+							<div class="p-3"><p>{{ data.email }}</p></div>
 						</div>
 					</div>
 
-					<div class=" bg-black mt-2">
+					<div class="bg-black mt-2">
 						<div class="d-flex">
 							<div class="p-3"><i class="fa fa-map-marker mt-1 pl-2"></i></div>
-							<div class="p-3"><a href="#">{{ data.address }}</a></div>
+							<div class="p-3"><p>{{ data.address }}</p></div>
 						</div>
 					</div>
 				</div>
@@ -336,31 +287,6 @@
 										</a>
 									</div>
 								{% endfor %}
-								<!-- <div class="item">
-									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-										<i class="fa fa-facebook socialicons-designs"></i>
-									</a>
-								</div>
-								<div class="item">
-									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-										<i class="fa fa-instagram socialicons-designs"></i>
-									</a>
-								</div>
-								<div class="item">
-									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-										<i class="fa fa-pinterest-p socialicons-designs"></i>
-									</a>
-								</div>
-								<div class="item">
-									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-										<i class="fa fa-youtube socialicons-designs"></i>
-									</a>
-								</div>
-								<div class="item">
-									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-										<i class="fa fa-google socialicons-designs"></i>
-									</a>
-								</div> -->
 							</div>
 				</div>
 			</div>
@@ -425,6 +351,7 @@
 		{% if auth %}
 		<div class="container mt-5 text-center">
 			<a href="http://127.0.0.1:8000/profile/edit/{{ data.id }}" class="btn btn-danger">Edit Profile</a>
+			<!-- <a href="{% url '' data.id %}" class="btn btn-danger">Edit Profile</a> -->
 		</div>
 		{% endif %}
 
@@ -527,21 +454,21 @@
 	<script>
 		$(document).ready(function(){
 			$('.owl-carousel').owlCarousel({
-				loop:true,
+				// loop:true,
 				margin:10,
 				nav:false,
-				autoplay:true,
-				autoplayTimeout:2000,
-				autoplayHoverPause:true,
+				// autoplay:true,
+				// autoplayTimeout:2000,
+				// autoplayHoverPause:true,
 				responsive:{
 					0:{
-						items:5
+						items:4
 					},
 					600:{
-						items:5
+						items:4
 					},
 					1000:{
-						items:5
+						items:4
 					}
 				}
 			})
